--- a/20.ipynb
+++ b/20.ipynb
@@ -1062,8 +1062,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ad9a22cb-69bf-4383-824a-de2ebda3301d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print 1 to 1o\n",
+    "for i in range(1,11):\n",
+    "    print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8eb03a1b-caaf-480b-ba44-cfe75166e2d9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4825c04f-19c8-4080-bb56-41d41950c25b",
    "metadata": {},
    "outputs": [],
    "source": []
