--- a/29Numpy.ipynb
+++ b/29Numpy.ipynb
@@ -567,6 +567,110 @@
    "id": "49544b37-fcaf-4e12-ae53-47cdbb2024e8",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "### Indexing and slicing NumPy arrays:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "09977e0f-a0a0-4a52-8297-33570eb0311a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = np.arange(1,10)\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a40f5a96-51e3-4f97-8041-1445634a6c35",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea5c9f1a-d35d-4a69-b789-693045201dd1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3b5e433-0c74-48b1-b988-05ce2607c3b0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d59fc8b9-47e9-4da8-bbb3-3e3e71a51bd8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c4f4fac-1d01-40a8-a61c-a3d33acaa3d9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbe9e7e4-5a9f-4a03-820f-cbda3ba82f49",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dcee34a3-2923-4eff-bb17-55ca35e2751f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7bfe3fd-59e0-46c9-bde5-7810572f32dc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c9d0dd3-b429-48d4-b908-61bf62a100fc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf4b2158-d57a-494f-8e51-8dff447b58a6",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
